--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "netsolinappruterpbocche",
-    "version": "1.2.12",
+    "version": "1.2.13",
     "author": "Equipo Netsolin. Sistemas Integrales de Colombia SAS",
     "homepage": "http://netsolin.com/",
     "scripts": {
@@ -34,7 +34,6 @@
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^4.0.0",
-        "@ionic/ng-toolkit": "^1.1.0",
         "@ionic/pro": "2.0.4",
         "@ionic/storage": "^2.2.0",
         "@ngx-translate/core": "^11.0.1",
@@ -69,7 +68,7 @@
         "@angular/compiler": "~7.2.2",
         "@angular/compiler-cli": "~7.2.2",
         "@angular/language-service": "~7.2.2",
-        "@ionic/angular-toolkit": "~1.2.0",
+        "@ionic/angular-toolkit": "^1.3.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~10.12.0",
