--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
         "cordova-android": "7.1.4",
         "cordova-plugin-bluetooth-serial": "0.4.7",
         "cordova-plugin-camera": "4.0.3",
-        "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-device": "2.0.2",
         "cordova-plugin-file": "6.0.1",
         "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-firebase": "2.0.5",
         "cordova-plugin-geolocation": "4.0.1",
         "cordova-plugin-ionic": "5.2.10",
-        "cordova-plugin-ionic-keyboard": "^2.1.3",
+        "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^2.0.0",
         "cordova-plugin-network-information": "2.0.1",
         "cordova-plugin-splashscreen": "5.0.2",
-        "cordova-plugin-statusbar": "^2.4.2",
-        "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-plugin-statusbar": "2.4.2",
+        "cordova-plugin-whitelist": "1.3.3",
         "core-js": "^2.5.4",
         "firebase": "^5.8.1",
         "rxjs": "^6.3.3",
@@ -111,7 +111,12 @@
             "cordova-plugin-geolocation": {
                 "GEOLOCATION_USAGE_DESCRIPTION": "La app necesita localización"
             },
-            "cordova-plugin-network-information": {}
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-ionic-keyboard": {}
         },
         "cordova-plugin-network-information": {},
         "cordova-plugin-whitelist": {},
@@ -119,7 +124,10 @@
         "cordova-plugin-device": {},
         "cordova-plugin-splashscreen": {},
         "cordova-plugin-ionic-webview": {},
-        "cordova-plugin-ionic-keyboard": {}
+        "cordova-plugin-ionic-keyboard": {},
+        "platforms": [
+            "android"
+        ]
     },
     "platforms": [
         "android"
