--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/http": "^7.2.2",
         "@angular/platform-browser": "^7.2.2",
         "@angular/platform-browser-dynamic": "^7.2.2",
+        "@angular/pwa": "^0.8.5",
         "@angular/router": "^7.2.2",
         "@angular/service-worker": "^7.2.2",
         "@ionic-native/bluetooth-serial": "^5.0.0",
@@ -34,7 +35,9 @@
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^4.0.0",
+        "@ionic/ng-toolkit": "^1.1.0",
         "@ionic/pro": "2.0.4",
+        "@ionic/schematics-angular": "^1.0.7",
         "@ionic/storage": "^2.2.0",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
@@ -53,6 +56,7 @@
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-statusbar": "2.4.2",
         "cordova-plugin-whitelist": "1.3.3",
+        "cordova-sqlite-storage": "^2.6.0",
         "core-js": "^2.5.4",
         "firebase": "^5.8.1",
         "rxjs": "^6.3.3",
@@ -88,6 +92,19 @@
     "description": "Netsolin: App rutero y erp mini",
     "cordova": {
         "plugins": {
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-ionic-keyboard": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-geolocation": {
+                "GEOLOCATION_USAGE_DESCRIPTION": "La app necesita localización"
+            },
+            "cordova-plugin-camera": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-firebase": {},
             "cordova-plugin-ionic": {
                 "APP_ID": "4771304e",
                 "CHANNEL_NAME": "Master",
@@ -104,19 +121,7 @@
                 "UPDATE_API": "https://api.ionicjs.com",
                 "MIN_BACKGROUND_DURATION": "30"
             },
-            "cordova-plugin-bluetooth-serial": {},
-            "cordova-plugin-camera": {},
-            "cordova-plugin-file": {},
-            "cordova-plugin-firebase": {},
-            "cordova-plugin-geolocation": {
-                "GEOLOCATION_USAGE_DESCRIPTION": "La app necesita localización"
-            },
-            "cordova-plugin-network-information": {},
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-ionic-keyboard": {}
+            "cordova-plugin-bluetooth-serial": {}
         },
         "cordova-plugin-network-information": {},
         "cordova-plugin-whitelist": {},
